fix z-index issue

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -56,7 +56,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.85);
-    z-index: 5;
+    z-index: 99;
     width: 100%;
     height: 100%;
 
